// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly adds groups 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="change-profile-permission-input"
        >
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          profile={
            {
              "language": "js",
              "name": "Sonar way",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`correctly adds users 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="change-profile-permission-input"
        >
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          profile={
            {
              "language": "js",
              "name": "Sonar way",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="change-profile-permission-input"
        >
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          profile={
            {
              "language": "js",
              "name": "Sonar way",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: submitting 1`] = `
<Modal
  contentLabel="quality_profiles.grant_permissions_to_user_or_group"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      quality_profiles.grant_permissions_to_user_or_group
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="change-profile-permission-input"
        >
          quality_profiles.search_description
        </label>
        <ProfilePermissionsFormSelect
          onChange={[Function]}
          profile={
            {
              "language": "js",
              "name": "Sonar way",
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
      >
        add_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
